# lighteragent

./: .gitignore  ARCHITECTURE.md  BUILD.md  Makefile  README.md  builder.html  builder.js  chain.js  config.js  create.html  create.js  data.js  deployments.example.json  discover.js  index.html  portfolio.html  portfolio.js  store.js  ui.js  vault.html  vault.js  wallet.js
agent-runtime/: Dockerfile  README.md  demo_shell.py  entrypoint.py  funding_carry.py  healthcheck.py  nemoclaw.policy.yaml  requirements.txt
agent-runtime/shell/: __init__.py  agent.py  attestation.py  order_gateway.py  shell.py  skill_loader.py  skill_registry_client.py
agent-sdk/: README.md  pyproject.toml
agent-sdk/eigenstrategies_sdk/: __init__.py  guardrails.py  lighter_client.py  runtime.py  strategy.py
agent-sdk/eigenvaults_sdk/: __init__.py  lighter_client.py  runtime.py  vault_client.py
agents/funding-carry/: Dockerfile  README.md  requirements.txt  strategy.py
contracts/: .gitignore  README.md  foundry.toml
contracts/interfaces/: IAttestationRegistry.sol  IEigenVault.sol  IFeeAccountant.sol  ISkillRegistry.sol  IVaultFactory.sol
contracts/interfaces/adapters/: ILighterAdapter.sol
contracts/script/: Deploy.s.sol
contracts/src/: AttestationRegistry.sol  EigenVault.sol  FeeAccountant.sol  SkillRegistry.sol  VaultFactory.sol
contracts/src/adapters/: LighterAdapter.sol
contracts/test/: Access.t.sol  Base.t.sol  ImageRotation.t.sol  SkillRegistry.t.sol  VaultLifecycle.t.sol
deploy/: .env.example  .gitignore  README.md  deploy.sh  eigencompute.app.yaml
web/: index.html
(+3 files in other folders)
