[project]
name = "eigenvaults-sdk"
version = "0.1.0"
description = "Python SDK for building EigenVaults trading agents that run on EigenCompute and trade on Lighter."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lighter-v2-python>=0.1.10",
  "web3>=7.0",
  "eth-account>=0.13",
  "httpx>=0.27",
  "pydantic>=2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eigenvaults_sdk*"]
